// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal backgroundHTML when enableBackgroundUI is false renders children 1`] = `
<Portal
  key="1"
>
  <styled.div
    className={null}
    data-state="open"
    transitionName="modal"
  >
    <TransitionGroup
      childFactory={[Function]}
      component="div"
    >
      <CSSTransition
        appear={true}
        classNames="modal-background"
        key="modal"
        timeout={500}
      >
        <styled.div
          data-element="modal-background"
          transitionName="modal-background"
        />
      </CSSTransition>
    </TransitionGroup>
    <TransitionGroup
      childFactory={[Function]}
      component="div"
    />
  </styled.div>
</Portal>
`;

exports[`Modal backgroundHTML when enableBackgroundUI is true renders children 1`] = `
<Portal
  key="1"
>
  <styled.div
    className={null}
    data-state="open"
    transitionName="modal"
  >
    <TransitionGroup
      childFactory={[Function]}
      component="div"
    />
    <TransitionGroup
      childFactory={[Function]}
      component="div"
    />
  </styled.div>
</Portal>
`;
